--- a/gb/17/11/19/n9862666.md
+++ b/gb/17/11/19/n9862666.md
@@ -1,62 +1,67 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/9p.md#1">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/mprjd2205/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/mprjd2205/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>¡¶¾ÅÆÀ¡·±à¼­²¿£º¡¶¹²²úÖ÷ÒåµÄÖÕ¼«Ä¿µÄ¡·ÐòÑÔ</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2016/11/1511211415361812.jpg" />
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="è´­ç‰©"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="ææ¬¾"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>ã€Šä¹è¯„ã€‹ç¼–è¾‘éƒ¨ï¼šã€Šå…±äº§ä¸»ä¹‰çš„ç»ˆæžç›®çš„ã€‹åºè¨€</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2016/11/1511211415361812.jpg" />
 <h6></h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2017Äê11ÔÂ18ÈÕÑ¶¡¿ÔÚ¡¶<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84.md">¾ÅÆÀ</a><a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%85%9A.md">¹²²úµ³</a>¡··¢±í13ÖÜÄêÖ®¼Ê£¬¡¶¾ÅÆÀ¡·±à¼­²¿·¢±íÐÂÊé¡¶<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89.md">¹²²úÖ÷Òå</a>µÄÖÕ¼«Ä¿µÄ¡·¡£´ó¼ÍÔª´Ó½ñÌìÆð½«¿¯ÔØÈ«ÊéÄÚÈÝ¡£</p>
+<p>ã€å¤§çºªå…ƒ2017å¹´11æœˆ18æ—¥è®¯ã€‘åœ¨ã€Š<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84.md#1">ä¹è¯„</a><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%85%9A.md#1">å…±äº§å…š</a>ã€‹å‘è¡¨13å‘¨å¹´ä¹‹é™…ï¼Œã€Šä¹è¯„ã€‹ç¼–è¾‘éƒ¨å‘è¡¨æ–°ä¹¦ã€Š<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89.md#1">å…±äº§ä¸»ä¹‰</a>çš„ç»ˆæžç›®çš„ã€‹ã€‚å¤§çºªå…ƒä»Žä»Šå¤©èµ·å°†åˆŠè½½å…¨ä¹¦å†…å®¹ã€‚</p>
 <p>******<br />
-<strong>¡¶<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89.md">¹²²úÖ÷Òå</a>µÄÖÕ¼«Ä¿µÄ¡·ÐòÑÔ</strong></p>
-<p>´ÓµÚÒ»¸ö¹²²úÕþÈ¨ËÕ¶í³öÏÖµ½½ñÌì£¬ÕûÕûÒ»°ÙÄê¹ýÈ¥ÁË¡£ÔÚ¶Ì¶ÌÒ»¸öÊÀ¼ÍµÄÊ±¼äÀï£¬¹²²úÖ÷ÒåÔì³ÉÁËÉÏÒÚÈËµÄËÀÍö¡£<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%85%9A.md">¹²²úµ³</a>´ÓÒ»¿ªÊ¼¾ÍÁÁ³öÁËÓëÉñÕù¶áÈËÀàµÄÆìÖÄ£¬º°³ö¡°´ÓÀ´¾ÍÃ»ÓÐÊ²Ã´¾ÈÊÀÖ÷¡±£¬Òª°Ñ¡°¾ÉÊÀ½ç´ò¸öÂä»¨Á÷Ë®¡±¡£</p>
-<p>¹²²úÖ÷ÒåÀ´×ÔºÎ´¦£¿ÎªÊ²Ã´ÓîÖæÖÐ»áÃ°³ö¸ö¹²²úµ³£¿¹²²úÖ÷ÒåµÄ±¾ÖÊ¾¿¾¹ÊÇÊ²Ã´£¿½á¾ÖÓÖ»áÔõÑù£¿¶ÔÕâÐ©¸ù±¾ÎÊÌâµÄ´ð°¸£¬ÈËÃÇÖÚËµ·×ç¡£¬ÏÖÔÚÊÇ½Ò¿ªÃÕµ×µÄÊ±ºòÁË¡£</p>
-<p>¹²²úÖ÷ÒåµÄ±¾ÖÊÊÇÒ»¸ö¡°Ð°Áé¡±£¬ËüÓÉ¡°ºÞ¡±¼°µÍ²ãÓîÖæÖÐµÄ°ÜÎïËù¹¹³É£¬Ëü³ðºÞÇÒÏë»ÙÃðÈËÀà¡£Ëü²¢²»ÒÔÉ±ËÀÈËµÄÈâÉíÎªÂú×ã£¬ÒòÎªÈËÈâÉíµÄËÀÍö²¢·ÇÉúÃüµÄÕæÕýËÀÍö£¬ÔªÉñ£¨Áé»ê£©»¹»áÂÖ»Ø×ªÉú£»µ«µ±Ò»¸öÈËµÀµÂ°Ü»µµ½ÎÞ¿É¾ÈÒ©µÄµØ²½£¬ÔªÉñ¾Í»áÔÚÎÞ¾¡µÄÍ´¿àÖÐ±»³¹µ×Ïú»Ù£¬ÄÇ²ÅÊÇ×î¿ÉÅÂµÄ¡¢ÉúÃüÕæÕýµÄËÀÍö¡£¡°¹²²úÐ°Áé¡±¾ÍÊÇÒªÊ¹È«ÈËÀà¶¼µøÈëÕâÑùÍò½Ù²»¸´µÄÉîÔ¨ÖÐ¡£</p>
-<p>1989Äê°ØÁÖÇ½µ¹Ëú£¬ËæºóËÕÁª¼°¶«Å·¹²²úÖ÷ÒåÕóÓªÑ¸ËÙ½âÌå£¬ËÆºõÈ«ÊÀ½ç¶¼ÈÏÎª¡°ÀäÕ½¡±ÒÑ¾­½áÊø£¬¹²²úÖ÷ÒåÒâÊ¶ÐÎÌ¬À£²»³É¾ü£»Á¬²ÐÓàµÄ¹²²ú¹ú¼Ò×ÔÉí¶¼¸Ðµ½Î£ÈçÀÛÂÑ¡£¶øÊµ¼ÊÇé¿öÊÇ£¬Ô­½ÌÖ¼µÄºÍ¸ÄÍ·»»ÃæµÄ¹²²úÖ÷ÒåË¼Ïë¼°ÒòËØÒÀÈ»ËÁÅ°È«Çò¡£ÕâÀïÓÐÈÔ¹«¿ª³ÐÈÏÊÇÉç»áÖ÷ÒåµÄ¹ú¼Ò£¬ÈçÖÐ¡¢³¯¡¢¹Å¡¢Ô½£¬Ò²ÓÐ´ò×ÅÃñÖ÷»ò¹²ºÍÆìºÅÊµÐÐÉç»áÖ÷ÒåµÄÖî¶à·ÇÖÞºÍÄÏÃÀ¹ú¼Ò£¬¸üÓÐ±»¹²²úÖ÷ÒåÒòËØÑÏÖØÇÖÊ´¶ø²»×ÔÖªµÄºÜ¶àÅ·ÖÞºÍ±±ÃÀÃñÖ÷¹ú¼Ò¡£</p>
-<p>ÎÞÂÛÊÇ±©Á¦À©ÕÅ»¹ÊÇÇÄÈ»ÉøÍ¸£¬¡°¹²²úÐ°Áé¡±³¹µ×»ÙÃðÈËµÄ·½·¨¾ÍÊÇÆÆ»µ´´ÊÀÖ÷Îª×îºó¾ÈÈËËùµì¶¨µÄÎÄ»¯¡£ÈËÀàÊ§È¥ÁËÕâÖÖÎÄ»¯£¬¾ÍÊ§È¥ÈËÖ®ÎªÈËµÄ±ê×¼£¬ÔÚÉñµÄÑÛÖÐ³ÉÎªÍ½¾ßÈËÐÎµÄÊÞ£¬²»½öµÀµÂÉÏÊ§È¥Ô¼Êø¡¢¼±¾ç¶éÂä£¬¸üÎÞ·¨Àí½â´´ÊÀÖ÷ÏÂÊÀ¾ÈÈËËù¿ªÊ¾µÄÌì»ú£¬Ò²¾ÍÊ§È¥ÁË´óÄÑÀ´Ê±±»¾ÈµÄ»ú»á¡£ÕâÊÇÉúÃü×î´óµÄ½ÙÊý¡ª¡ª±»ÓÀÔ¶Ïú»Ù£¬Ò²ÊÇ¡°¹²²úÐ°Áé¡±µÄÖÕ¼«Ä¿µÄ¡£</p>
-<p>±¾×Å¶ÔÉñÔìÉúÃüµÄÎÞ±ÈÕäÊÓ£¬±¾×Å¶ÔÈËÀàµÄÉîÇÐ¹Ø»³£¬ÎÒÃÇÐ´ÏÂÕâ±¾Êé¡ª¡ª¡¶<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89%E7%9A%84%E7%BB%88%E6%9E%81%E7%9B%AE%E7%9A%84.md">¹²²úÖ÷ÒåµÄÖÕ¼«Ä¿µÄ</a>¡·£¬ÏòÊÀÈËÏµÍ³·ÖÎöºÍ½ÒÊ¾¡°¹²²úÐ°Áé¡±Í¨¹ýÆÆ»µÎÄ»¯¡¢°Ü»µµÀµÂ¶ø»ÙÃðÈËÀàµÄÌì´óÒõÄ±¡£</p>
-<p>ÔÚ²»Í¬µÄÃñ×åÖÐ£¬¶¼Á÷´«×Å×îºóÉñ»áÀ´Õü¾ÈÈËµÄ´«Ëµ¡£ÈËÀàÒÑ¾­×ßµ½ÁËÓîÖæÀúÊ·µÄ×ªÕÛ¹ØÍ·£¬¶ø¹²²úÐ°½Ì¾ÍÊÇÈËÀà´ËÊ±»ñµÃÕü¾ÈµÄ×î´óÕÏ°­¡£Òò´Ë£¬ÎÒÃÇÆÈÇÐµØÒÔÎª£¬±ØÐë³¹µ×½ÒÊ¾ÆäÖÕ¼«µÄÐ°¶ñÄ¿µÄºÍÊÖ¶Î£¬ÈÃÈËÀàÄÜÆ¾Á¼Öª±¾ÐÔµÄÅÐ¶ÏÅ×Æú¹²²úÐ°½Ì¡¢ºÍÆ½½âÌå¹²²ú×éÖ¯²¢ÏµÍ³ÇåÀí¹²²úÖ÷ÒåÐ°¶ñÒòËØ£¬Ó­½ÓÈËÀàµÄÐÂ¼ÍÔª¡£</p>
-<p>±¾Êé·ÖÉÏÏÂÁ½²¿£ºÉÏ²¿¡¶<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89%E7%9A%84%E7%BB%88%E6%9E%81%E7%9B%AE%E7%9A%84.md">¹²²úÖ÷ÒåµÄÖÕ¼«Ä¿µÄ</a>£¨ÖÐ¹úÆª£©¡·£¬ÏÂ²¿¡¶¹²²úÖ÷ÒåµÄÖÕ¼«Ä¿µÄ£¨ÊÀ½çÆª£©¡·¡£´ó¼ÍÔª½«Ê×ÏÈ·¢±íÉÏ²¿¡¶ÖÐ¹úÆª¡·£¬ÏÂ²¿½«ÔÚ²»¾ÃÒÔºóÍÆ³ö£¬¾´Çë¹Ø×¢¡£</p>
-<p>½÷ÒÔ´ËÊéÏ×¸øËùÓÐÕæÐÄÏ£ÍûÖÐ»ªÃñ×åÎÄÃ÷ÉÆÁ¼¡¢·±ÈÙ¸»Ç¿µÄÈË£¡</p>
-<p>½÷ÒÔ´ËÊéÏ×¸øËùÓÐ¹ØÐÄÈËÀàÃüÔËµÄÈË£¡</p>
-<p>¡¶<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84.md">¾ÅÆÀ</a>¡·±à¼­²¿<br />
-2017Äê11ÔÂ18ÈÕ</p>
-<p>£¨µãÔÄ<a href="https://github.com/mprjd2205/djy/blob/master/gb/nf1235328.md">¡¶¹²²úÖ÷ÒåµÄÖÕ¼«Ä¿µÄ¡·</a>È«Êé£¬ÏÂÔØÈ«Êé£º<a href="http://i.epochtimes.com/assets/uploads/2017/12/JPN-S-V2-171216.pdf" target="_blank" rel="noopener noreferrer">PDF¼òÌå°æ</a>£¬<a href="http://i.epochtimes.com/assets/uploads/2017/12/JPN-T-V2-171216.pdf" target="_blank" rel="noopener noreferrer">PDFÕýÌå°æ</a>£¬<a href="http://i.epochtimes.com/assets/uploads/2017/12/JPN-S-V2-171216D.docx" target="_blank" rel="noopener noreferrer">WORD¼òÌå°æ</a>£¬<a href="http://i.epochtimes.com/assets/uploads/2017/12/JPN-T-V2-171216D.docx" target="_blank" rel="noopener noreferrer">WORDÕýÌå°æ</a>£¬<a href="http://i.epochtimes.com/assets/uploads/2017/12/Tekan_V24_P32_GB.pdf" target="_blank" rel="noopener noreferrer">PDF¸ßÇåÔÓÖ¾¼òÌå°æ</a>£¬<a href="http://i.epochtimes.com/assets/uploads/2017/12/Tekan_V24_P32_TC.pdf" target="_blank" rel="noopener noreferrer">PDF¸ßÇåÔÓÖ¾ÕýÌå°æ</a>£©#</p>
+<strong>ã€Š<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89.md#1">å…±äº§ä¸»ä¹‰</a>çš„ç»ˆæžç›®çš„ã€‹åºè¨€</strong></p>
+<p>ä»Žç¬¬ä¸€ä¸ªå…±äº§æ”¿æƒè‹ä¿„å‡ºçŽ°åˆ°ä»Šå¤©ï¼Œæ•´æ•´ä¸€ç™¾å¹´è¿‡åŽ»äº†ã€‚åœ¨çŸ­çŸ­ä¸€ä¸ªä¸–çºªçš„æ—¶é—´é‡Œï¼Œå…±äº§ä¸»ä¹‰é€ æˆäº†ä¸Šäº¿äººçš„æ­»äº¡ã€‚<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%85%9A.md#1">å…±äº§å…š</a>ä»Žä¸€å¼€å§‹å°±äº®å‡ºäº†ä¸Žç¥žäº‰å¤ºäººç±»çš„æ——å¸œï¼Œå–Šå‡ºâ€œä»Žæ¥å°±æ²¡æœ‰ä»€ä¹ˆæ•‘ä¸–ä¸»â€ï¼Œè¦æŠŠâ€œæ—§ä¸–ç•Œæ‰“ä¸ªè½èŠ±æµæ°´â€ã€‚</p>
+<p>å…±äº§ä¸»ä¹‰æ¥è‡ªä½•å¤„ï¼Ÿä¸ºä»€ä¹ˆå®‡å®™ä¸­ä¼šå†’å‡ºä¸ªå…±äº§å…šï¼Ÿå…±äº§ä¸»ä¹‰çš„æœ¬è´¨ç©¶ç«Ÿæ˜¯ä»€ä¹ˆï¼Ÿç»“å±€åˆä¼šæ€Žæ ·ï¼Ÿå¯¹è¿™äº›æ ¹æœ¬é—®é¢˜çš„ç­”æ¡ˆï¼Œäººä»¬ä¼—è¯´çº·çº­ï¼ŒçŽ°åœ¨æ˜¯æ­å¼€è°œåº•çš„æ—¶å€™äº†ã€‚</p>
+<p>å…±äº§ä¸»ä¹‰çš„æœ¬è´¨æ˜¯ä¸€ä¸ªâ€œé‚ªçµâ€ï¼Œå®ƒç”±â€œæ¨â€åŠä½Žå±‚å®‡å®™ä¸­çš„è´¥ç‰©æ‰€æž„æˆï¼Œå®ƒä»‡æ¨ä¸”æƒ³æ¯ç­äººç±»ã€‚å®ƒå¹¶ä¸ä»¥æ€æ­»äººçš„è‚‰èº«ä¸ºæ»¡è¶³ï¼Œå› ä¸ºäººè‚‰èº«çš„æ­»äº¡å¹¶éžç”Ÿå‘½çš„çœŸæ­£æ­»äº¡ï¼Œå…ƒç¥žï¼ˆçµé­‚ï¼‰è¿˜ä¼šè½®å›žè½¬ç”Ÿï¼›ä½†å½“ä¸€ä¸ªäººé“å¾·è´¥ååˆ°æ— å¯æ•‘è¯çš„åœ°æ­¥ï¼Œå…ƒç¥žå°±ä¼šåœ¨æ— å°½çš„ç—›è‹¦ä¸­è¢«å½»åº•é”€æ¯ï¼Œé‚£æ‰æ˜¯æœ€å¯æ€•çš„ã€ç”Ÿå‘½çœŸæ­£çš„æ­»äº¡ã€‚â€œå…±äº§é‚ªçµâ€å°±æ˜¯è¦ä½¿å…¨äººç±»éƒ½è·Œå…¥è¿™æ ·ä¸‡åŠ«ä¸å¤çš„æ·±æ¸Šä¸­ã€‚</p>
+<p>1989å¹´æŸæž—å¢™å€’å¡Œï¼ŒéšåŽè‹è”åŠä¸œæ¬§å…±äº§ä¸»ä¹‰é˜µè¥è¿…é€Ÿè§£ä½“ï¼Œä¼¼ä¹Žå…¨ä¸–ç•Œéƒ½è®¤ä¸ºâ€œå†·æˆ˜â€å·²ç»ç»“æŸï¼Œå…±äº§ä¸»ä¹‰æ„è¯†å½¢æ€æºƒä¸æˆå†›ï¼›è¿žæ®‹ä½™çš„å…±äº§å›½å®¶è‡ªèº«éƒ½æ„Ÿåˆ°å±å¦‚ç´¯åµã€‚è€Œå®žé™…æƒ…å†µæ˜¯ï¼ŒåŽŸæ•™æ—¨çš„å’Œæ”¹å¤´æ¢é¢çš„å…±äº§ä¸»ä¹‰æ€æƒ³åŠå› ç´ ä¾ç„¶è‚†è™å…¨çƒã€‚è¿™é‡Œæœ‰ä»å…¬å¼€æ‰¿è®¤æ˜¯ç¤¾ä¼šä¸»ä¹‰çš„å›½å®¶ï¼Œå¦‚ä¸­ã€æœã€å¤ã€è¶Šï¼Œä¹Ÿæœ‰æ‰“ç€æ°‘ä¸»æˆ–å…±å’Œæ——å·å®žè¡Œç¤¾ä¼šä¸»ä¹‰çš„è¯¸å¤šéžæ´²å’Œå—ç¾Žå›½å®¶ï¼Œæ›´æœ‰è¢«å…±äº§ä¸»ä¹‰å› ç´ ä¸¥é‡ä¾µèš€è€Œä¸è‡ªçŸ¥çš„å¾ˆå¤šæ¬§æ´²å’ŒåŒ—ç¾Žæ°‘ä¸»å›½å®¶ã€‚</p>
+<p>æ— è®ºæ˜¯æš´åŠ›æ‰©å¼ è¿˜æ˜¯æ‚„ç„¶æ¸—é€ï¼Œâ€œå…±äº§é‚ªçµâ€å½»åº•æ¯ç­äººçš„æ–¹æ³•å°±æ˜¯ç ´ååˆ›ä¸–ä¸»ä¸ºæœ€åŽæ•‘äººæ‰€å¥ å®šçš„æ–‡åŒ–ã€‚äººç±»å¤±åŽ»äº†è¿™ç§æ–‡åŒ–ï¼Œå°±å¤±åŽ»äººä¹‹ä¸ºäººçš„æ ‡å‡†ï¼Œåœ¨ç¥žçš„çœ¼ä¸­æˆä¸ºå¾’å…·äººå½¢çš„å…½ï¼Œä¸ä»…é“å¾·ä¸Šå¤±åŽ»çº¦æŸã€æ€¥å‰§å •è½ï¼Œæ›´æ— æ³•ç†è§£åˆ›ä¸–ä¸»ä¸‹ä¸–æ•‘äººæ‰€å¼€ç¤ºçš„å¤©æœºï¼Œä¹Ÿå°±å¤±åŽ»äº†å¤§éš¾æ¥æ—¶è¢«æ•‘çš„æœºä¼šã€‚è¿™æ˜¯ç”Ÿå‘½æœ€å¤§çš„åŠ«æ•°â€”â€”è¢«æ°¸è¿œé”€æ¯ï¼Œä¹Ÿæ˜¯â€œå…±äº§é‚ªçµâ€çš„ç»ˆæžç›®çš„ã€‚</p>
+<p>æœ¬ç€å¯¹ç¥žé€ ç”Ÿå‘½çš„æ— æ¯”çè§†ï¼Œæœ¬ç€å¯¹äººç±»çš„æ·±åˆ‡å…³æ€€ï¼Œæˆ‘ä»¬å†™ä¸‹è¿™æœ¬ä¹¦â€”â€”ã€Š<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89%E7%9A%84%E7%BB%88%E6%9E%81%E7%9B%AE%E7%9A%84.md#1">å…±äº§ä¸»ä¹‰çš„ç»ˆæžç›®çš„</a>ã€‹ï¼Œå‘ä¸–äººç³»ç»Ÿåˆ†æžå’Œæ­ç¤ºâ€œå…±äº§é‚ªçµâ€é€šè¿‡ç ´åæ–‡åŒ–ã€è´¥åé“å¾·è€Œæ¯ç­äººç±»çš„å¤©å¤§é˜´è°‹ã€‚</p>
+<p>åœ¨ä¸åŒçš„æ°‘æ—ä¸­ï¼Œéƒ½æµä¼ ç€æœ€åŽç¥žä¼šæ¥æ‹¯æ•‘äººçš„ä¼ è¯´ã€‚äººç±»å·²ç»èµ°åˆ°äº†å®‡å®™åŽ†å²çš„è½¬æŠ˜å…³å¤´ï¼Œè€Œå…±äº§é‚ªæ•™å°±æ˜¯äººç±»æ­¤æ—¶èŽ·å¾—æ‹¯æ•‘çš„æœ€å¤§éšœç¢ã€‚å› æ­¤ï¼Œæˆ‘ä»¬è¿«åˆ‡åœ°ä»¥ä¸ºï¼Œå¿…é¡»å½»åº•æ­ç¤ºå…¶ç»ˆæžçš„é‚ªæ¶ç›®çš„å’Œæ‰‹æ®µï¼Œè®©äººç±»èƒ½å‡­è‰¯çŸ¥æœ¬æ€§çš„åˆ¤æ–­æŠ›å¼ƒå…±äº§é‚ªæ•™ã€å’Œå¹³è§£ä½“å…±äº§ç»„ç»‡å¹¶ç³»ç»Ÿæ¸…ç†å…±äº§ä¸»ä¹‰é‚ªæ¶å› ç´ ï¼Œè¿ŽæŽ¥äººç±»çš„æ–°çºªå…ƒã€‚</p>
+<p>æœ¬ä¹¦åˆ†ä¸Šä¸‹ä¸¤éƒ¨ï¼šä¸Šéƒ¨ã€Š<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89%E7%9A%84%E7%BB%88%E6%9E%81%E7%9B%AE%E7%9A%84.md#1">å…±äº§ä¸»ä¹‰çš„ç»ˆæžç›®çš„</a>ï¼ˆä¸­å›½ç¯‡ï¼‰ã€‹ï¼Œä¸‹éƒ¨ã€Šå…±äº§ä¸»ä¹‰çš„ç»ˆæžç›®çš„ï¼ˆä¸–ç•Œç¯‡ï¼‰ã€‹ã€‚å¤§çºªå…ƒå°†é¦–å…ˆå‘è¡¨ä¸Šéƒ¨ã€Šä¸­å›½ç¯‡ã€‹ï¼Œä¸‹éƒ¨å°†åœ¨ä¸ä¹…ä»¥åŽæŽ¨å‡ºï¼Œæ•¬è¯·å…³æ³¨ã€‚</p>
+<p>è°¨ä»¥æ­¤ä¹¦çŒ®ç»™æ‰€æœ‰çœŸå¿ƒå¸Œæœ›ä¸­åŽæ°‘æ—æ–‡æ˜Žå–„è‰¯ã€ç¹è£å¯Œå¼ºçš„äººï¼</p>
+<p>è°¨ä»¥æ­¤ä¹¦çŒ®ç»™æ‰€æœ‰å…³å¿ƒäººç±»å‘½è¿çš„äººï¼</p>
+<p>ã€Š<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84.md#1">ä¹è¯„</a>ã€‹ç¼–è¾‘éƒ¨<br />
+2017å¹´11æœˆ18æ—¥</p>
+<p>ï¼ˆç‚¹é˜…<ahref="https://github.com/tjvrql262/djy/blob/master/gb/nf1235328.md#1">ã€Šå…±äº§ä¸»ä¹‰çš„ç»ˆæžç›®çš„ã€‹</a>å…¨ä¹¦ï¼Œä¸‹è½½å…¨ä¹¦ï¼š<ahref="https://i.epochtimes.com/assets/uploads/2017/12/JPN-S-V2-171216.pdf" target="_blank" rel="noopener noreferrer">PDFç®€ä½“ç‰ˆ</a>ï¼Œ<ahref="https://i.epochtimes.com/assets/uploads/2017/12/JPN-T-V2-171216.pdf" target="_blank" rel="noopener noreferrer">PDFæ­£ä½“ç‰ˆ</a>ï¼Œ<ahref="https://i.epochtimes.com/assets/uploads/2017/12/JPN-S-V2-171216D.docx" target="_blank" rel="noopener noreferrer">WORDç®€ä½“ç‰ˆ</a>ï¼Œ<ahref="https://i.epochtimes.com/assets/uploads/2017/12/JPN-T-V2-171216D.docx" target="_blank" rel="noopener noreferrer">WORDæ­£ä½“ç‰ˆ</a>ï¼Œ<ahref="https://i.epochtimes.com/assets/uploads/2017/12/Tekan_V24_P32_GB.pdf" target="_blank" rel="noopener noreferrer">PDFé«˜æ¸…æ‚å¿—ç®€ä½“ç‰ˆ</a>ï¼Œ<ahref="https://i.epochtimes.com/assets/uploads/2017/12/Tekan_V24_P32_TC.pdf" target="_blank" rel="noopener noreferrer">PDFé«˜æ¸…æ‚å¿—æ­£ä½“ç‰ˆ</a>ï¼‰#</p>
 
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/17/11/19/n9862666.htm">¡¶¾ÅÆÀ¡·±à¼­²¿£º¡¶¹²²úÖ÷ÒåµÄÖÕ¼«Ä¿µÄ¡·ÐòÑÔ</a>
 
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/17/11/18/n9860127.htm">´óÂ½ÃñÖÚ£º¹ã´«¡¶¾ÅÆÀ¡·ÔçÈÕ½áÊøÖÐ¹²±©Õþ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/11/16/n9847533.htm">¹²²úÖ÷ÒåÊÜÄÑÕß¼ÍÄî±®ÓëÈ¥¹²»¯ÀË³±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/12/4/n8558434.htm">´¨ÈË£º¹²²úÖ÷ÒåÖÆ¶ÈÈÃ²Ð±©¶À²ÃÕß±²³ö£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/11/21/n8513970.htm">ÁèÏþ»Ô£º¶à¿´¼¸±é¾ÅÆÀÇå³ý¶¾ËØ ÊÜÒæÎÞÇî</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/11/18/n8505380.htm">ÖÙÎ¬¹â£º¾ÅÆÀ¿ç¹ú½ç Éæ¼°ÈËÀà¸ü¹ã·ºµÄÃüÔË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/11/19/n8508294.htm">³ÌÏþÈÝ£º¡¶¾ÅÆÀ¡·12ÖÜÄê©¤©¤¹âÃ÷µÄÀË³±</a></li>
-> <li><a href="https://github.com/mprjd2205/djy/blob/master/gb/17/6/30/n9341788.md">¡¾ÊÓÆµ¡¿¹²²úÖ÷Òå²»ÊÇ³öÂ·¶øÊÇ¾øÂ·</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635571.htm">±±¾©»¨¾Þ×Ê»»Âí¿ËÁú²Î¼Ó½ø²©»á È´Ôâµ±ÃæÅúÆÀ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635931.htm">ÍõÐ¡ºéÈÎÖÐ¹²ÐÂÉè»ú¹¹ÌØÇÚ¾Ö¾Ö³¤ Òý²Â²â</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635908.htm">ÖØÇì¸±Êé¼Ç´«×¹Â¥Íö ÒÉÎªËÄÖÐÈ«»áÈ¨¶·ÎþÉüÆ·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11636278.htm">¡¾·­Ç½±Ø¿´¡¿·ÖÎö£ºËÄÖÐÈ«»á¹«±¨»òÐ¹´óÃØÃÜ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/11/n11582046.htm">ÌÆ´úÊ¹ÕßÆ¯Á÷µ½¾ÞÈË¹ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/25/n11612042.htm">¡¾²Å×Ó¼ÑÈË¡¿Áº×£µÄ¹ÊÊÂ ÎÒÃÇ¶Á¶®ÁËÂð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/28/n11617434.htm">¡¾ÀúÊ·»Øíø¡¿Ô¶ÀëÖÐ¹² ÔÚ¸Û½¨ÖÐÎÄ´óÑ§µÄÇ®ÄÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/28/n11617442.htm">»´ÄÏÍõÒ»ÐÄÇóµÀ µÃÓö¡°°Ë¹«¡±µÇÏÉ½ç</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/4/n11633229.htm">È±Ï¯ÖÐ¹²ËÄÖÐÈ«»áµÄ5ÈË¶¼ÓÐË­£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/3/n11631025.htm">ÄâÄêµ×ÒÆÃñÌ¨Íå ÏôÈôÔª£ºÀë¿ªÏã¸ÛÊÇ¼þÍ´¿àÊÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/4/n11633083.htm">Ï°½üÆ½ÉÏº£¼ûÁÖÖ£ÔÂ¶ð ¹«°²²¿³¤ËæÐÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11633716.htm">¡¾ÅÄ°¸¾ªÆæ¡¿Ïã¸ÛÏÖ¿Ö²À ÁÖÖ£¼ûº«ÕýÎª23Ìõ£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/2/n11629293.htm">¡¾ÐÂÎÅ¿´µã¡¿ÃÀ¹úÖÇ»ÛÆÆ½âÖÐ¹²Ð°Ëµ ±±¾©Ìø½Å</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11636316.htm">¡¾ÅÄ°¸¾ªÆæ¡¿¸ÛÒÕÈË¼¤±ç·´ËÍÖÐ ¿Æ´óÉú×¹Â¥·ÖÎö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/3/n11631025.htm">ÄâÄêµ×ÒÆÃñÌ¨Íå ÏôÈôÔª£ºÀë¿ªÏã¸ÛÊÇ¼þÍ´¿àÊÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/3/n11631219.htm">ÒÅ´«Àîö¦ÀÙÌì¸³ ÍõÁ¦ºê3ËêÅ®¶ùÕ¹»­¹¦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/3/n11630758.htm">·¶±ù±ù¸ßÔÆÏèºÏÅÄ¾ç»»½ÇÖØÅÄ È·¶¨ÐÂ½ÇÒÑ½ø×é</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/4/n11632910.htm">Ò¶ÔÌÒÇÔÚÎÚ¿ËÀ¼¶ÀÁ¢¹ã³¡·¢Éù£ºÐÄÓëÏã¸ÛÏàÁª</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/4/n11631669.htm">–Í¹ú¼Ý³µÊèÊ§µ¼ÖÂÊÂ¹Ê Big HitÓéÀÖ·¢ÉùÃ÷ÖÂÇ¸</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/11/18/n9860127.md#1">å¤§é™†æ°‘ä¼—ï¼šå¹¿ä¼ ã€Šä¹è¯„ã€‹æ—©æ—¥ç»“æŸä¸­å…±æš´æ”¿</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/17/11/16/n9847533.md#1">å…±äº§ä¸»ä¹‰å—éš¾è€…çºªå¿µç¢‘ä¸ŽåŽ»å…±åŒ–æµªæ½®</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/12/4/n8558434.md#1">å·äººï¼šå…±äº§ä¸»ä¹‰åˆ¶åº¦è®©æ®‹æš´ç‹¬è£è€…è¾ˆå‡ºï¼Ÿ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/11/21/n8513970.md#1">å‡Œæ™“è¾‰ï¼šå¤šçœ‹å‡ éä¹è¯„æ¸…é™¤æ¯’ç´  å—ç›Šæ— ç©·</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/11/18/n8505380.md#1">ä»²ç»´å…‰ï¼šä¹è¯„è·¨å›½ç•Œ æ¶‰åŠäººç±»æ›´å¹¿æ³›çš„å‘½è¿</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/16/11/19/n8508294.md#1">ç¨‹æ™“å®¹ï¼šã€Šä¹è¯„ã€‹12å‘¨å¹´â”€â”€å…‰æ˜Žçš„æµªæ½®</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mprjd2205/djy/blob/master/gb/17/11/19/n9862666.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/mprjd2205/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/mprjd2205/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">ã€æœ€æ–°ç–«æƒ…3.13ã€‘å·æ™®ï¼šæˆ‘å’Œä¹ éƒ½çŸ¥ç—…æ¯’æ¥æº</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/18/n10793353.md#1" target="_blank">æž—è¾‰ï¼šé‡‘åº¸å ‚å“¥ç©†æ—¦èµ°åˆ°äº†å¹»æƒ³çš„å°½å¤´</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">è—å­—çŸ³ è•´å¤©æœº</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/4/n11569061.md#1" target="_blank">æ³•è½®åŠŸå­¦å‘˜å—é‚€åœ¨ç¾Žæ™ºåº“æ¼”è®² æ„ŸåŠ¨åŽåºœå¬ä¼—</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">ä¸­å…±å‘è¨€äººèµ–ç¾Žå†›å¸¦ç–«æƒ…åˆ°æ­¦æ±‰ å›½é™…å“—ç„¶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">é™ˆæ—¶ä¸­ï¼šä¸­å…±è°ˆç–«æƒ…æ²¡äººä¿¡ WHOä»€ä¹ˆéƒ½ä¸è¯´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">ã€æœ€æ–°ç–«æƒ…3.13ã€‘å·æ™®ï¼šæˆ‘å’Œä¹ éƒ½çŸ¥ç—…æ¯’æ¥æº</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">ç¾Žå›½CDCæ‰¿è®¤äº†ä»€ä¹ˆï¼Ÿä¸­å…±å†é€ å‡</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">å¤ä»Šä¸­å¤–é¢„è¨€ä¸­çš„2020å¹´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">ã€æ–‡å²ã€‘ä¸ºä¸€åœºåœ°éœ‡ å†¥ç•Œç­¹å¤‡äº†50å¹´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">çš‡ä¸Šå¯¹è—è™«è¯´äº†ä¸€å¥è¯ æ¼«å¤©è—ç¾å½»åº•æ¶ˆå¤±</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">ä¸­å›½ç­‰å›½ä¸ºä½•ç–«æƒ…ä¸¥é‡ï¼ŸçŠ¹å¤ªæ‹‰æ¯”ï¼šç¥žåœ¨é™¤æ¶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">ä¼ é’Ÿå—å±±è¢«å…èŒ ä¸“å®¶ç»„ç»„é•¿æ‚„æ‚„æ¢äººå†…å¹•</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘å‘å“¨äººå¼•çˆ†èˆ†æƒ… ä¹ è®¿æ­¦æ±‰ å®˜å®£ç ´äº§</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">å­æ„Ÿé«˜ä»·èœå¼•çˆ†å¤§è§„æ¨¡æŠ—è®® å¸‚æ°‘æ€’å–Šâ€œä¸‹è¯¾â€</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘ç”©é”…ç¾Žå†› ä¸­å…±å¤–äº¤éƒ¨æ¼”åŒç°§ï¼Ÿ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">ã€ç½—åŽ¨å¯»å‘³ã€‘è…Šå‘³ç‚’è·å…°è±†</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">çˆ¶æ¯æŸ“ç–«åŽ»ä¸– æ­¦æ±‰é’å±±åŒºçˆ†å­¤å„¿éš”ç¦»ç‚¹</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">ä¸–å«æ”¹æ­¦æ±‰è‚ºç‚Žåç§° é»„ç§‹ç”Ÿæ–¥è´£èŽ·ç½‘å‹èµžçˆ†</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">â€œå¥³ç‰ˆé»„å®‰â€åˆ˜ä¹å¦è¿”å°ä½é™¢ç”¨å¥ä¿ ç½‘å‹ç‚®è½°</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">ä¼ ä¸­å…±å¹¿ç”µå±€ä¸‹é™ç±ä»¤ åˆ˜äº¦è²å´äº¦å‡¡æˆ–å—å½±å“</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">æ„å¤§åˆ©ä¸ºä½•ç–«æƒ…ä¸¥é‡ï¼Ÿæ„è£”å°æ¹¾ç”·æ˜ŸæžåŽŸå› </a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">å´äº¦å‡¡ä»ŽåŠ å›½å›žä¸­å›½å¤å·¥ ä¸€æŠµè¾¾ä¾¿è¢«å¸¦èµ°éš”ç¦»</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/17/11/19/n9862666.htm">ã€Šä¹è¯„ã€‹ç¼–è¾‘éƒ¨ï¼šã€Šå…±äº§ä¸»ä¹‰çš„ç»ˆæžç›®çš„ã€‹åºè¨€</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/17/11/19/n9862666.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
